<resources>
    <string name="app_name">MyApplication002</string>
    <string name="btn_send">Odeslat</string>
    <string name="btn_delete">Vymazat</string>
    <string name="hint_age">Věk</string>
    <string name="hint_name">Zadejte jméno</string>
    <string name="hint_town">Zadejte město</string>
    <string name="hint_surname">Zadejte příjmení</string>
    <string name="txtInformace">Informace</string>
</resources>