<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_name"
            android:textColor="@color/myBrown"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_surname"
            android:textColor="@color/myBrown"
            android:layout_weight="1" />

    </LinearLayout>


    <EditText
        android:id="@+id/etTown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_town"
        android:inputType="text"
        android:textColor="@color/myBrown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        android:inputType="number"
        android:textColor="@color/myBrown"
        android:layout_weight="1"
        android:layout_marginEnd="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSend"
        android:layout_weight="4"
        android:text="@string/btn_send"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnVymazat"
            android:layout_weight="4"
            android:text="@string/btn_delete"
            android:backgroundTint="@color/myBrown"/>

    </LinearLayout>




    <TextView
        android:id="@+id/twInformation"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/txtInformace"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="@color/myGreen"/>


</LinearLayout>

<!-- toto je komentář -->